--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "vue": "^2.5.2",
     "vue-axios": "^2.1.2",
     "vue-router": "^3.0.1",
+    "vuetify": "^1.1.8",
     "vuex": "^3.0.1",
     "vuex-persist": "^1.4.3"
   },
